@@ -216,7 +216,7 @@ import org.plumelib.util.UtilPlume;
   "resolveReflection",
 
   // Whether to use whole-program inference. Takes an argument to specify the output format:
-  // "-Ainfer=stubs" or "-Ainfer=jaifs".
+  // "-Ainfer=ajava" or "-Ainfer=stubs" or "-Ainfer=jaifs".
   "infer",
 
   // The directory into which to write whole-program inference results.
@@ -225,6 +225,9 @@ import org.plumelib.util.UtilPlume;
   // Whether to output a copy of each file for which annotations were inferred, formatted
   // as an ajava file. Can only be used with -Ainfer=ajava
   "inferOutputOriginal",
+
+  // Whether to show diagnostics about failed inference steps during whole-program inference.
+  "showWpiFailedInferences",
 
   // With each warning, in addition to the concrete error key,
   // output the SuppressWarnings strings that can be used to
@@ -689,8 +692,12 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
         throw new UserError("Must supply an argument to -AwarnUnneededSuppressionsExceptions");
       }
       try {
-        warnUnneededSuppressionsExceptions =
+        @SuppressWarnings(
+            "regex:argument") // user-provided string; validity checked by PatternSyntaxException
+        // catch
+        Pattern warnUnneededSuppressionsExceptionsPattern =
             Pattern.compile(warnUnneededSuppressionsExceptionsString);
+        warnUnneededSuppressionsExceptions = warnUnneededSuppressionsExceptionsPattern;
       } catch (PatternSyntaxException e) {
         throw new UserError(
             "Argument to -AwarnUnneededSuppressionsExceptions is not a regular expression: "
@@ -932,6 +939,16 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
     return getPattern(patternName, options, ".");
   }
 
+  /**
+   * Returns a pattern from user-supplied options.
+   *
+   * @param patternName the name of the pattern to look up in the options
+   * @param options the options supplied by the user
+   * @param defaultPattern the pattern to return if the user didn't supply a value
+   * @return the user-supplied pattern for {@code patternName}
+   */
+  @SuppressWarnings(
+      "regex:argument") // pattern string comes from user options; validated by try-catch
   private Pattern getPattern(
       String patternName, Map<String, String> options, String defaultPattern) {
     String pattern;
@@ -1225,7 +1242,7 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
 
       immediateSubcheckers = instantiateSubcheckers(checkerMap);
 
-      subcheckers = Collections.unmodifiableList(new ArrayList<>(checkerMap.values()));
+      subcheckers = List.copyOf(checkerMap.values());
     }
 
     return subcheckers;
@@ -1486,10 +1503,10 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
       messageText = messageText.replace(System.lineSeparator(), " / ");
     }
 
-    if (source instanceof Element) {
-      messager.printMessage(kind, messageText, (Element) source);
-    } else if (source instanceof Tree) {
-      printOrStoreMessage(kind, messageText, (Tree) source, currentRoot);
+    if (source instanceof Element elem) {
+      messager.printMessage(kind, messageText, elem);
+    } else if (source instanceof Tree sourceTree) {
+      printOrStoreMessage(kind, messageText, sourceTree, currentRoot);
     } else {
       throw new BugInCF("invalid position source of class " + source.getClass() + ": " + source);
     }
@@ -1665,8 +1682,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    */
   protected Object processErrorMessageArg(Object arg) {
     // Check to see if the argument itself is a property to be expanded
-    if (arg instanceof String) {
-      return messagesProperties.getProperty((String) arg, (String) arg);
+    if (arg instanceof String s) {
+      return messagesProperties.getProperty(s, s);
     } else {
       return arg;
     }
@@ -1762,10 +1779,10 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    * @return the tree associated with the given source object, or null if none
    */
   private @Nullable Tree sourceToTree(@Nullable Object source) {
-    if (source instanceof Element) {
-      return trees.getTree((Element) source);
-    } else if (source instanceof Tree) {
-      return (Tree) source;
+    if (source instanceof Element elem) {
+      return trees.getTree(elem);
+    } else if (source instanceof Tree sourceTree) {
+      return sourceTree;
     } else if (source == null) {
       return null;
     } else {
@@ -2128,34 +2145,36 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
 
       String[] split = key.split(OPTION_SEPARATOR);
 
-      splitlengthswitch:
       switch (split.length) {
-        case 1:
+        case 1 -> {
           // No separator, option always active.
           activeOpts.put(key, value);
-          break;
-        case 2:
+        }
+        case 2 -> {
           Class<?> clazz = this.getClass();
-
+          boolean found = false;
           do {
             if (clazz.getCanonicalName().equals(split[0])
                 || clazz.getSimpleName().equals(split[0])) {
               // Valid class-option pair.
               activeOpts.put(split[1], value);
-              break splitlengthswitch;
+              found = true;
+              break;
             }
-
             clazz = clazz.getSuperclass();
           } while (clazz != null
               && !clazz.getName().equals(AbstractTypeProcessor.class.getCanonicalName()));
-          // Didn't find a matching class. Option might be for another processor. Add
-          // option anyways. javac will warn if no processor supports the option.
-          activeOpts.put(key, value);
-          break;
-        default:
+          if (!found) {
+            // Didn't find a matching class. Option might be for another processor. Add
+            // option anyways. javac will warn if no processor supports the option.
+            activeOpts.put(key, value);
+          }
+        }
+        default -> {
           // Too many separators. Option might be for another processor. Add option
           // anyways. javac will warn if no processor supports the option.
           activeOpts.put(key, value);
+        }
       }
     }
     return activeOpts;
@@ -2535,8 +2554,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
     List<? extends AnnotationTree> annotations;
     if (TreeUtils.isClassTree(tree)) {
       annotations = ((ClassTree) tree).getModifiers().getAnnotations();
-    } else if (tree instanceof MethodTree) {
-      annotations = ((MethodTree) tree).getModifiers().getAnnotations();
+    } else if (tree instanceof MethodTree mt) {
+      annotations = mt.getModifiers().getAnnotations();
     } else {
       annotations = ((VariableTree) tree).getModifiers().getAnnotations();
     }
@@ -2562,10 +2581,10 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
    * @see #shouldSuppressWarnings(Tree, String)
    */
   private boolean shouldSuppressWarnings(@Nullable Object src, String errKey) {
-    if (src instanceof Element) {
-      return shouldSuppressWarnings((Element) src, errKey);
-    } else if (src instanceof Tree) {
-      return shouldSuppressWarnings((Tree) src, errKey);
+    if (src instanceof Element elem) {
+      return shouldSuppressWarnings(elem, errKey);
+    } else if (src instanceof Tree srcTree) {
+      return shouldSuppressWarnings(srcTree, errKey);
     } else if (src == null) {
       return false;
     } else {
@@ -2630,13 +2649,13 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
 
       Tree decl = declPath.getLeaf();
 
-      if (decl instanceof VariableTree) {
-        Element elt = TreeUtils.elementFromDeclaration((VariableTree) decl);
+      if (decl instanceof VariableTree vt) {
+        Element elt = TreeUtils.elementFromDeclaration(vt);
         if (shouldSuppressWarnings(elt, errKey)) {
           return true;
         }
-      } else if (decl instanceof MethodTree) {
-        Element elt = TreeUtils.elementFromDeclaration((MethodTree) decl);
+      } else if (decl instanceof MethodTree mt) {
+        Element elt = TreeUtils.elementFromDeclaration(mt);
         if (shouldSuppressWarnings(elt, errKey)) {
           return true;
         }
@@ -3176,8 +3195,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
         }
 
         DiagnosticPosition pos = null;
-        if ((ce instanceof BugInCF) && ((BugInCF) ce).getLocation() != null) {
-          pos = (DiagnosticPosition) ((BugInCF) ce).getLocation();
+        if (ce instanceof BugInCF bugInCF && bugInCF.getLocation() != null) {
+          pos = (DiagnosticPosition) bugInCF.getLocation();
         } else if (this.visitor != null) {
           pos = (DiagnosticPosition) this.visitor.lastVisited;
         }
@@ -3415,8 +3434,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
       Field field = handler.getClass().getDeclaredField("val$delegateTo");
       field.setAccessible(true);
       Object o = field.get(handler);
-      if (o instanceof ProcessingEnvironment) {
-        return (ProcessingEnvironment) o;
+      if (o instanceof ProcessingEnvironment pe) {
+        return pe;
       }
       return null;
     } catch (NoSuchFieldException | IllegalAccessException e) {
@@ -3438,8 +3457,8 @@ public abstract class SourceChecker extends AbstractTypeProcessor implements Opt
       Field field = delegateClass.getDeclaredField("delegate");
       field.setAccessible(true);
       Object o = field.get(env);
-      if (o instanceof ProcessingEnvironment) {
-        return (ProcessingEnvironment) o;
+      if (o instanceof ProcessingEnvironment pe) {
+        return pe;
       }
       return null;
     } catch (NoSuchFieldException | IllegalAccessException e) {
